--- a/projects/templates/projects/base.html
+++ b/projects/templates/projects/base.html
@@ -49,7 +49,7 @@
                     <i class="fa fa-comments"></i>
                     <span>Messaging</span>
                 </a>
-                <a href="#">
+                <a href="{% url 'notifications_view' %}">
                     <i class="fa fa-bell"></i>
                     <span>Notifications</span>
                 </a>
