--- a/projects/templates/projects/profile.html
+++ b/projects/templates/projects/profile.html
@@ -36,7 +36,7 @@
                 <a href="{% url 'home' %}"><i class="fa fa-home"></i><span>Home</span></a>
                 <a href="{% url 'network' %}"><i class="fa fa-users"></i><span>My Network</span></a>
                 <a href="{% url 'active_conversations' %}"><i class="fa fa-comments"></i><span>Messaging</span></a>
-                <a href="#"><i class="fa fa-bell"></i><span>Notifications</span></a>
+                <a href="{% url 'notifications_view' %}"><i class="fa fa-bell"></i><span>Notifications</span></a>
             </div>
             <div class="unique-profile-dropdown">
                 <div class="unique-profile-trigger" id="uniqueProfileTrigger">
