--- a/projects/templates/projects/base.html
+++ b/projects/templates/projects/base.html
@@ -100,8 +100,8 @@
             <!-- Logo -->
             <div class="custom-navbar-logo">
                 <a href="{% url 'home' %}">
-                    <img src="/static/projects/images/logo.png" alt="DevLink Logo">
-                </a>
+                 <!--  <img src="/static/projects/images/logo.png" alt="DevLink Logo">-->
+                    <span class="devlink-logo">DevLink</span>
             </div>
 
             <!-- Just Login & Signup Links -->
